--- a/style.css
+++ b/style.css
@@ -52,3 +52,9 @@ body {
   border: 0.25vmin solid black;
   z-index: 3;
 }
+
+.wall {
+  background-color: hsl(0, 0%, 15%);
+  border: 0.25vmin solid black;
+  z-index: 3;
+}
