--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   width: 100vw;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: black;
