--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: rgb(31, 52, 121);
   margin: 0;
 }
 
@@ -34,17 +34,28 @@ body {
 .game-board::after {
   content: attr(data-content);
   font-size: 20rem;
-  color: black;
-  opacity: 0.1;
+  background: inherit;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  filter: invert(1) grayscale(1);
+  -webkit-filter: invert(1) grayscale(1);
+  opacity: 0.7;
   position: absolute;
   left: 50%;
   top: 50%;
+  z-index: 2;
   transform: translate(-50%, -50%);
 }
 
 .snake {
   background-color: hsl(200, 100%, 50%);
-  border: 0.25vmin solid black;
+  border: 0.25vmin solid hsl(200, 100%, 50%);
+  z-index: 3;
+}
+.snakeHead {
+  background-color: hsl(184, 98%, 45%);
+  border: 0.25vmin solid hsl(184, 98%, 45%);
   z-index: 3;
 }
 
@@ -56,8 +67,8 @@ body {
 
 .wall {
   background-color: hsl(0, 0%, 15%);
-  border: 0.25vmin solid black;
-  z-index: 3;
+  border: 0.25vmin solid hsl(0, 0%, 15%);
+  z-index: 1;
 }
 
 #wallSet {
