--- a/style.css
+++ b/style.css
@@ -34,13 +34,9 @@ body {
 .game-board::after {
   content: attr(data-content);
   font-size: 20rem;
-  background: inherit;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  filter: invert(1) grayscale(1);
-  -webkit-filter: invert(1) grayscale(1);
-  opacity: 0.7;
+
+  color: lightslategray;
+
   position: absolute;
   left: 50%;
   top: 50%;
