--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   font-size: 20rem;
 
   color: lightslategray;
-
+  opacity: 0.4;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -46,12 +46,12 @@ body {
 
 .snake {
   background-color: hsl(200, 100%, 50%);
-  border: 0.25vmin solid hsl(200, 100%, 50%);
+  border: 0.25vmin solid black;
   z-index: 3;
 }
 .snakeHead {
   background-color: hsl(184, 98%, 45%);
-  border: 0.25vmin solid hsl(184, 98%, 45%);
+  border: 0.25vmin solid black;
   z-index: 3;
 }
 
@@ -63,7 +63,7 @@ body {
 
 .wall {
   background-color: hsl(0, 0%, 15%);
-  border: 0.25vmin solid hsl(0, 0%, 15%);
+  border: 0.25vmin solid black;
   z-index: 1;
 }
 
