--- a/style.css
+++ b/style.css
@@ -113,8 +113,23 @@ body {
   color: rgb(177, 177, 177);
   cursor: pointer;
 }
+#settings {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-flow: dense;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid aqua;
+}
+
+.settings-item {
+  padding: 3rem;
+  text-align: center;
+  border-top: 1px solid aqua;
+}
 .modal-container {
   width: 70%;
+  max-height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -138,6 +153,6 @@ body {
   text-align: center;
 }
 
-#default-btn {
+.frm_Btn {
   margin-top: 2rem;
 }
