--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   width: 95vmin;
   height: 95vmin;
   display: grid;
-
+  margin: 1rem;
   background-color: #ccc;
   position: relative;
 }
@@ -138,6 +138,7 @@ body {
   padding: 0.5rem;
   margin: 0.2rem;
   font-weight: bold;
+  font-size: clamp(0.8rem, 3vw, 1.2rem);
   color: navy;
 }
 .modal-container label,
