--- a/style.css
+++ b/style.css
@@ -115,18 +115,15 @@ body {
 }
 #settings {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  background-color: rgba(0, 255, 255, 0.5);
+  grid-template-columns: 1fr 150px;
+  gap: 5px;
   grid-auto-flow: dense;
   align-items: center;
   justify-content: center;
-  border: 1px solid aqua;
+  overflow: hidden;
 }
 
-.settings-item {
-  padding: 3rem;
-  text-align: center;
-  border-top: 1px solid aqua;
-}
 .modal-container {
   width: 70%;
   max-height: 80vh;
@@ -135,8 +132,8 @@ body {
   justify-content: center;
 }
 .modal-container * {
-  padding: 0.5rem;
-  margin: 0.2rem;
+  /* padding: 0.5rem;
+  margin: 0.2rem; */
   font-weight: bold;
   font-size: clamp(0.8rem, 3vw, 1.2rem);
   color: navy;
@@ -145,15 +142,42 @@ body {
 .modal-container p {
   color: whitesmoke;
 }
+.settings-item {
+  margin: 0;
+  padding: 1rem;
+  background-color: rgba(6, 6, 97, 0.5);
+  text-align: center;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.select-container {
+  display: flex;
+  height: 100%;
+  padding: 0;
+  margin: 0;  */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.modal-container select {
+  padding: 0.1rem;
+  width: 60px;
+  max-height: 2rem;
+  justify-self: center;
+  border: none;
+}
 .btn {
   padding: 0.5rem;
   margin: 0.2rem;
 }
 
-.opt {
-  text-align: center;
-}
-
 .frm_Btn {
-  margin-top: 2rem;
+  margin: 1rem;
+  max-width: fit-content;
+  padding-inline: 3rem;
+  grid-column: span 2;
+  justify-self: center;
+  align-self: center;
 }
