--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ body {
   display: flex;
   height: 100%;
   padding: 0;
-  margin: 0;  */
+  margin: 0;
   justify-content: center;
   align-items: center;
   text-align: center;
